# RCRustAssignment

./: .gitignore  README.md  main  main.rs
minigrep/: Cargo.toml
minigrep/src/: log.rs  main  main.rs  test.txt  test.yaml
