[package]
name = "minigrep"
version = "0.1.0"
authors = ["Brianna Boyce <brieboyce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"